--- a/index.html
+++ b/index.html
@@ -7,18 +7,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="Buttons">
+
+    </div>
     <p id="bank"></p>
     <button id="gobbagool"></button><br><br>
-    <button id="tralalero">Tralalero Tralala: Cost = </button><br><br>
-    <button id="tralalero">Bombardiro Crocodilo: Cost = 20</button><br><br>
-    <button id="tralalero">Brr Brr Patapim: Cost = </button><br><br>
-    <button id="tralalero">Boneca Ambalabu: Cost = 5</button><br><br>
-    <button id="tralalero">Bobrito Bandito: Cost = 5</button><br><br>
-    <button id="tralalero">Lirili Larila: Cost = 5</button><br><br>
-    <button id="tralalero">Ballerina Capuccina: Cost = 5</button><br><br>
-    <button id="tralalero">Cupuccino Assasino: Cost = 5</button><br><br>
-    <button id="tralalero">Tung Tung Tung Tung Tung Tung Tung Tung Tung Sahur : Cost = 5</button><br><br>
-    <button id="tralalero">Chimpanzini Bananini: Cost = 5</button><br><br>
+
 
 </body>
 </html>
