we're pretty good at this stuff

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </div>
     <p id="bank"></p>
-    <button id="gobbagool"></button><br><br>
+    <button id="gobbagool" ><img src="FinalGabaGool.png"/></button><br><br>
 
 
 </body>
