--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     </div>
     <p id="bank"></p>
-    <button id="gobbagool" ><img src="FinalGabaGool.png"/></button><br><br>
+    <button id="gobbagool" ><img src="FinalGabaGool.png"/></button>
+    <p id="perSecond"></p>
 
 
 </body>
