--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <script src="script.js" defer></script>
+    <title>Gobbagool Goonsoons</title>
+
 </head>
 <body>
+    <h1>Gobbagool Goonsoons</h1>
     <div id="Buttons">
 
     </div>
