--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     <h1 id="title">Gobbagool Goonsoons</h1>
     <div id="collums">
         <div id="Buttons">
-
         </div>
         <div id="clicky">
             <p id="bank"></p>
             <p id="perSecond"></p>
-            <button id="gobbagool" ><img src="FinalGabaGool.png"/></button>
-            
+            <button id="gobbagool" ><img src="FinalGabaGool.png" id="gobbaImg"/></button>
         </div>
     </div>
     
