Recolored some stuff and added a size change to the gaba gool

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="clicky">
             <p id="bank"></p>
             <p id="perSecond"></p>
-            <button id="gobbagool" ><img src="FinalGabaGool.png" id="gobbaImg"/></button>
+            <button id="gobbagool" ><img id="gobbaImg" src="FinalGabaGool.png" /></button>
         </div>
     </div>
     
