--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             <button id="gobbagool" ><img id="gobbaImg" src="FinalGabaGool.png" /></button>
         </div>
     </div>
-    
-    
-
-
 </body>
+<footer>
+    <img id="dumbpet" >
+</footer>
 </html>
