--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1 id="title">Gobbagool Goonsoons</h1>
+    <button id="Help">Help</button>
     <div id="collums">
         <div id="Buttons">
         </div>
